force-app/main/default/objects/Access_Master__c/Access_Master__c.object-meta.xml
<CustomObject>
    <label>Access Master</label>
    <nameField>
        <label>Access Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>