force-app/main/default/objects/Access_Master__c/fields/Access_For__c.field-meta.xml
<CustomField>
    <fullName>Access_For__c</fullName>
    <label>Access For</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelogin</fullName>
            </value>
            <value>
                <fullName>FIV - B</fullName>
            </value>
            <value>
                <fullName>FIV - C</fullName>
            </value>
            <value>
                <fullName>Online EC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>