force-app/main/default/objects/Access_Master__c/fields/Capacity_Used__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Used__c</fullName>
    <label>Capacity Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>