force-app/main/default/objects/Access_Master__c/fields/Next_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Next_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Next Assignment</label>
    <type>Checkbox</type>
</CustomField>