force-app/main/default/objects/Access_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Access_For__c</columns>
    <columns>User__c</columns>
    <columns>Next_Assignment__c</columns>
    <columns>Capacity_Used__c</columns>
    <columns>Sequence__c</columns>
    <columns>Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>